# LabProgrammazione

./: .gitignore  CMakeLists.txt  CollectionGroup.cpp  Note.cpp  Note.h  NoteCollection.cpp  NoteCollection.h  Observable.cpp  Observable.h  main.cpp
src/: CollectionGroup.h  Note.cpp  Note.h  NoteCollection.cpp  NoteCollection.h  Observable.h  Observer.cpp  Observer.h  main.cpp
tests/: CMakeLists.txt  NoteCollectionTests.cpp  NoteTests.cpp  test1.cpp
